<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_gerar_numeros"
                android:icon="@drawable/ic_gerar_numeros_black_24dp"
                android:title="@string/gerar_numeros"/>
        <item
                android:id="@+id/nav_meus_numeros"
                android:icon="@drawable/ic_meus_numeros_black_24dp"
                android:title="@string/meus_numeros"/>
        <item
                android:id="@+id/nav_lotericas_proximas"
                android:icon="@drawable/ic_lotericas_proximas_black_24dp"
                android:title="@string/lotericas_proximas"/>

    </group>



</menu>
