<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        tools:context="br.com.klenne.view.GerarNumeros" android:layout_width="wrap_content">

    <Button
            android:text="@string/gerar_n_meros"
            android:layout_width="150dp"
            android:layout_height="43dp"
            android:id="@+id/btn_gerar" android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:typeface="normal" style="@android:style/Widget.Button"
            android:textColor="#F9F9F9"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txv_numeroGerado"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.679"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btn_salvar"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txv_numeroGerado"
            android:layout_marginEnd="66dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="67dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/txv_numerosGeradosTitulo"/>

    <ImageView
            android:id="@+id/imv_logo"
            android:layout_width="108dp"
            android:layout_height="107dp"
            android:layout_marginStart="169dp"
            android:layout_marginEnd="170dp"
            android:contentDescription="@string/descricao_imagem_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spn_tiposDeJogos"
            app:srcCompat="@mipmap/ic_logo_foreground"
            tools:srcCompat="@mipmap/ic_logo_foreground" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/salvar_numero"
            android:layout_width="150dp"
            android:layout_height="43dp"
            android:id="@+id/btn_salvar" android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:typeface="normal" style="@android:style/Widget.Button"
            android:textColor="#F9F9F9"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txv_numeroGerado"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.679"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/btn_gerar"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/numeros_gerados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txv_numerosGeradosTitulo" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imv_logo"
            tools:ignore="HardcodedText" android:textColor="#070606"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/spn_tiposDeJogos" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/linearLayout" android:background="#0632AB">
        <TextView
                android:text="test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txv_titulo"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/btn_voltar"
                android:layout_marginStart="150dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="190dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>
        <ImageButton
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_voltar"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:background="@android:color/transparent"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>